kube/ingress/ingress.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-ingress-controller
  replicas: 1
  selector:
    matchLabels:
      name: nginx-ingress
  template:
    metadata:
      labels:
        name: nginx-ingress
    spec:
      containers:
      - args:
        - /nginx-ingress-controller
        - --configmap=$(POD_NAMESPACE)/nginx-configuration
        # - --default-backend-service=app-space/default-http-backend
        image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.21.0
        imagePullPolicy: IfNotPresent
        name: nginx-ingress-controller
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP


    # spec:
    #   containers:
    #     - name: nginx-ingress-controller
    #       image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.21.0
    #   - args:
    #     - /nginx-ingress-controller
    #     - --configmap=$(POD_NAMESPACE)/ginx-configuration
    #   env:
    #     - name: POD_NAME
    #       valueFrom:
    #         fieldRef:
    #           fieldPath: metadata.name
    #     - name: POD_NAMESPACE
    #       valueFrom: 
    #         fieldRef:
    #           fieldPath: metadata.namespace
    #   ports:
    #      - name: http
    #        containerPort: 80
    #      - name: https
    #        containerPort: 443
