kube/ingress/ingress-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ingress-nodeport
  name: nginx-ingress
spec:
  ports:
  - name: http
    nodePort: 31202
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    name: nginx-ingress
  type: NodePort
