kube/ingress/ingress-resource.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name:
    ingress-frontend
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: web
            servicePort: 9000
