kube/ingress/test-ingress-resource.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /users
          backend:
            serviceName: apple-service
            servicePort: 9000
        - path: /api
          backend:
            serviceName: app
            servicePort: 80
